# SGX-DCAP-Quote-Generation-Dockerfile

./: .gitmodules  Dockerfile  README.md  build_and_run.sh  install_dcap_driver.sh  install_dcap_pccs.sh  install_driver.sh  install_legacy_driver.sh
QuoteGenerationSample/: Dockerfile
RemoteAttestation/: Dockerfile  README.md  build_and_run.sh  build_and_run_aesm.sh  build_and_run_bootstrap_service.sh  build_and_run_client.sh  build_and_run_provisioning_service.sh  build_and_run_server.sh  docker-compose.yml  next.todo
RemoteAttestation/RemoteAttestation/: Makefile  entrypoint.sh
RemoteAttestation/RemoteAttestation/isv_app/: isv_app.cpp
RemoteAttestation/RemoteAttestation/service_provider/: ias_ra.cpp  service_provider.cpp
RemoteAttestation/kubernetes/: provisioning.yaml
RemoteAttestation/sgx-ra-sample/: .gitignore  Makefile.am  bootstrap  bootstrap_service.cpp  client.cpp  common.cpp  configure  configure.ac  crypto.c  crypto.h  fileio.c  logfile.c  mrsigner.c  msgio.cpp  policy.in  policy.in.h  provisioning_service.cpp  quote_size.c  quote_verify.cpp  quote_verify.h  run.in  settings  sp.cpp
RemoteAttestation/sgx-ra-sample/Enclave/: Enclave.cpp  Enclave.edl  Makefile.am  Makefile.in
RemoteAttestation/sgx-ra-sample/ProvisioningEnclave/: Makefile.am  ProvisioningEnclave.cpp  ProvisioningEnclave.edl  enclave_verify.cpp  enclave_verify.h  rsa.h
RemoteAttestation/sgx-ra-sample/ServerEnclave/: Makefile.am  ServerEnclave.config.xml  ServerEnclave.cpp  ServerEnclave.edl  ServerEnclave.h  crypto.c  crypto.h  rsa.c  rsa.h
RemoteAttestation/sgx-ra-sample/build-aux/: sgx_app.am  sgx_enclave.am
RemoteAttestation/sgx-ra-sample/common/: crypto.c  crypto.h  enclave_verify.cpp  enclave_verify.h  remote_attestation.cpp  remote_attestation.h
RemoteAttestation/sgx-ra-sample/keys/: Makefile  bootstrap_private.h  bootstrap_private.pem  bootstrap_public.h  bootstrap_public.pem  enclave_signing_private.h  enclave_signing_private.pem  provisioning_private.h  provisioning_private.pem  provisioning_public.h  provisioning_public.pem
RemoteAttestation/sgx-ra-sample/src/: common.cpp  protocol.h  sgx_detect_linux.c  sgx_stub.c
RemoteAttestation/sgx-ra-sample/src/bootstrap/: bootstrap_service.cpp
RemoteAttestation/sgx-ra-sample/src/client/: client.cpp  httplib.cpp  httplib.h
RemoteAttestation/sgx-ra-sample/src/client/Enclave/: Enclave.config.xml  Enclave.cpp  Enclave.edl  Makefile.am
RemoteAttestation/sgx-ra-sample/src/common/: byteorder.c  crypto.c  enclave_verify.cpp  hexutil.c  msgio.cpp  msgio.h  remote_attestation.cpp
RemoteAttestation/sgx-ra-sample/src/mrsigner/: mrsigner.c
RemoteAttestation/sgx-ra-sample/src/provisioning/: provisioning_service.cpp  quote_verify.cpp  quote_verify.h
RemoteAttestation/sgx-ra-sample/src/provisioning/ProvisioningEnclave/: Makefile.am  ProvisioningEnclave.cpp  ProvisioningEnclave.edl
docs/: index.rst
